--- a/app.wxss
+++ b/app.wxss
@@ -9,10 +9,6 @@
 
  */
 
- .wxFont{
-    font-family: "mala Bold";
-}
-
 page {
     width: 100%;
     min-height: 100vh;
@@ -100,12 +96,6 @@ button::after {
     overflow: hidden;
 }
 
-.viewLine {
-    width: 100%;
-    height: 2rpx;
-    background-color: #f2f2f2;
-}
-
 .scroll-view_y {
     background-color: #f3f5f9;
 }
@@ -146,93 +136,15 @@ button::after {
     margin-bottom: 40rpx;
 }
 
-/* 收集formid */
-
-.Sbtn {
-    width: 100%;
-    height: 100%;
-    padding: 0;
-    margin: 0;
-    position: absolute;
-    top: 0;
-    left: 0;
-    opacity: 0;
-}
-
-form {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    opacity: 0;
-}
-
-/* tanchuang */
-
-.beansRulsView {
-    width: 100%;
+/* 授权按钮 */
+#getInfoBtn{
+    width: 100vw;
     height: 100vh;
     position: fixed;
     top: 0;
     left: 0;
-    background: rgba(40, 40, 40, 0.7);
-    overflow: hidden;
+    opacity: 0;
+    padding: 0;
+    margin: 0;
 }
 
-.rulsBody {
-    width: 670rpx;
-    height: 794rpx;
-    background: #fff;
-    border-radius: 22rpx;
-    margin: 74rpx auto 0;
-    overflow: hidden;
-    text-align: center;
-}
-
-.rulsBody image {
-    width: 100%;
-    vertical-align: top;
-}
-
-.closeView, .closeView image {
-    width: 70rpx;
-    height: 70rpx;
-}
-
-.closeView {
-    margin: 40rpx auto 0;
-}
-
-.ruleTop{
-    width: 386rpx;
-    height: 132rpx;
-    margin: 110rpx auto 0;
-}
-
-.ruleTop image {
-    width: 386rpx;
-    height: 132rpx;
-    vertical-align: top;
-}
-
-.rulsBody {
-    margin: 172rpx auto 0;
-}
-
-.rulsBody image {
-    width: 128rpx;
-    height: 128rpx;
-    vertical-align: top;
-}
-
-.completeBtn {
-    width: 432rpx;
-    height: 88rpx;
-    background: linear-gradient(90deg, rgba(110, 198, 252, 1) 0%, rgba(69, 206, 189, 1) 100%);
-    border-radius: 16rpx;
-    line-height: 88rpx;
-    text-align: center;
-    color: white;
-    margin: 32rpx auto 0;
-}
