--- a/pages/results/results.wxss
+++ b/pages/results/results.wxss
@@ -3,16 +3,23 @@
     min-height: 100vh;
 }
 
-.posterView image {
-    width: 750rpx;
+.posterView{
+    width: 100%;
     height: 100vh;
-    vertical-align: top;
+    background-color: #000;
+    overflow: hidden;
+}
+
+.posterView image {
+    width: 580rpx;
+    height: 1032rpx;
+    display: block;
 }
 
 .btnView {
     width: 750rpx;
-    /* height: 140rpx; */
-    height: 12vh;
+    height: 94rpx;
+    /* height: 12vh; */
     display: flex;
     justify-content: flex-start;
     align-items: center;
@@ -25,18 +32,18 @@
 
 .shareBtnView {
     width: 50%;
-    /* height: 140rpx; */
-    height: 12vh;
+    height: 94rpx;
+    /* height: 12vh; */
     background: rgba(9, 115, 252, 1);
-    /* line-height: 140rpx; */
-    line-height: 12vh;
+    line-height: 94rpx;
+    /* line-height: 12vh; */
     position: relative;
 }
 
 .saveposter {
     width: 50%;
-    /* height: 140rpx; */
-    height: 12vh;
+    height: 94rpx;
+    /* height: 12vh; */
     display: flex;
     flex-direction: column;
     align-items: center;
