--- a/pages/results/results.wxss
+++ b/pages/results/results.wxss
@@ -10,10 +10,26 @@
     overflow: hidden;
 }
 
+.imgview{
+    width: 580rpx;
+    height: 1032rpx;
+    position: relative;
+    overflow: hidden;
+}
+
 .posterView image {
     width: 580rpx;
     height: 1032rpx;
-    display: block;
+    vertical-align: top;
+}
+
+.mask{
+    width: 100%;
+    height: 124rpx;
+    background-color: #000;
+    position: absolute;
+    bottom: 0;
+    left: 0;
 }
 
 .btnView {
