--- a/pages/classdetails/classdetails.wxss
+++ b/pages/classdetails/classdetails.wxss
@@ -9,9 +9,17 @@
 }
 
 .mubanItem {
+    background: rgba(216, 216, 216, 1);
+    margin-bottom: 20rpx;
+    box-shadow:0px 4rpx 8rpx 0px rgba(0,0,0,0.08);
+}
+
+.mubanItem image,.mubanItem{
     width: 338rpx;
     height: 528rpx;
-    background: rgba(216, 216, 216, 1);
     border-radius: 8rpx;
-    margin-bottom: 20rpx;
+}
+
+.nocom{
+    margin-left: 232rpx;
 }
