--- a/pages/classify/classify.wxss
+++ b/pages/classify/classify.wxss
@@ -1,1 +1,61 @@
-/* pages/classify/classify.wxss */
+.bg {
+    height: 100vh;
+    background-color: #fff;
+    display: flex;
+    justify-content: flex-start;
+}
+
+/* 左边分类类别 */
+
+.classView {
+    width: 170rpx;
+    min-height: 100vh;
+    background-color: #f3f4f6;
+}
+
+.classBox {
+    width: 170rpx;
+    height: 160rpx;
+    box-shadow: 6px 0px 0px 0px rgba(9, 115, 252, 1);
+    line-height: 160rpx;
+    text-align: center;
+    font-size: 40rpx;
+    color: #282828;
+    font-family: PingFangSC;
+    box-sizing: border-box;
+}
+
+.selectClassBox {
+    background-color: #fff;
+    border-left: 8rpx solid #0973fc;
+}
+
+/* 右边选项 */
+
+.mubanView {
+    width: 580rpx;
+    min-height: 100vh;
+    box-sizing: border-box;
+    padding: 10rpx 30rpx;
+    overflow: hidden;
+}
+
+.scrollContent {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.mubanitem {
+    width: 248rpx;
+    height: 388rpx;
+    margin-bottom: 20rpx;
+    border-radius: 8rpx;
+    overflow: hidden;
+    box-shadow:0px 4rpx 8rpx 0px rgba(0,0,0,0.08);
+}
+
+.mubanitem image {
+    width: 248rpx;
+    height: 388rpx;
+}
