--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -6,49 +6,48 @@
     </view>
 
     <!-- 四个分类标签 -->
-    <!-- <view class="classView">
-        <view class="classItem" wx:for="{{classArr}}" wx:key="{{index}}">
+    <view class="classView">
+        <view class="classItem" data-id="{{item.id}}" wx:for="{{classArr}}" wx:key="{{index}}" catchtap="checkClass">
             <view>
                 <image src="{{item.icon}}" style="box-shadow:0px 8rpx 16rpx 0px rgba{{item.color}};" />
             </view>
             <view>{{item.title}}</view>
         </view>
 
-        <view class="classItem">
+        <view class="classItem" catchtap="gotoClassify">
             <view>
                 <image src="/assets/app/allclass.png" style="box-shadow:0px 8rpx 16rpx 0px rgba(252,99,10,0.3); " />
             </view>
             <view>全部分类</view>
         </view>
-    </view> -->
+    </view>
 
     <!-- 模板列表 -->
-    <view class="mubanListView">
+    <view class="mubanListView" wx:for-index="bindex" wx:if="{{item.content.length}}" wx:for="{{contentArr}}" wx:key="{{index}}">
 
-        <!-- <view class="mubanClassTitle">
-            <text style="color:#222;font-size:40rpx;font-weight:bold;">每日问候</text>
+        <view class="mubanClassTitle" data-id="{{item.id}}" catchtap="checkClass">
+            <text style="color:#222;font-size:40rpx;font-weight:bold;">{{item.txt}}</text>
             <text style="color:#666;font-size:28rpx;">查看更多 ></text>
-        </view> -->
+        </view>
 
         <view class="mubanIconListView">
-            <view data-index="{{index}}" class="mubanItem" wx:for="{{contentArr}}" wx:key="{{index}}" catchtap="gotomaking">
+            <view data-bindex='{{bindex}}' data-index="{{index}}" class="mubanItem" wx:for="{{item.content}}" wx:key="{{index}}" catchtap="gotomaking">
                 <image src="{{srcDomin}}/newadmin/Uploads/{{item.xiaotu_url}}" />
             </view>
         </view>
 
         <!-- 暂时没有数据 -->
-        <view class='nocom' wx:if="{{!contentArr.length}}">
+        <view class='nocom' wx:if="{{!item.content.length}}">
             <image src='/assets/app/nodata.png' />
             <view>暂时还没有数据亲~</view>
         </view>
 
-
     </view>
 
     <!-- 加载中 -->
-    <view class='loading' wx:if="{{ifloadtxt}}">
+    <!-- <view class='loading' wx:if="{{ifloadtxt}}">
         加载中 . . .
-    </view>
+    </view> -->
 
     <button catchtap='catchtap' id='getInfoBtn' wx:if="{{!hasUserInfo && canIUse}}" open-type="getUserInfo" lang="zh_CN" bindgetuserinfo="getUserInfo">
     </button>
