--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -66,11 +66,13 @@ image {
     display: flex;
     justify-content: flex-start;
     flex-wrap: wrap;
+    margin-top: 22rpx;
 }
 
 .mubanItem {
     margin-bottom: 20rpx;
     margin-right: 22rpx;
+    box-shadow:0px 4rpx 8rpx 0px rgba(0,0,0,0.08);
 }
 
 .mubanItem:nth-of-type(3n+0) {
