--- a/pages/making/making.wxss
+++ b/pages/making/making.wxss
@@ -1,29 +1,49 @@
 .bg {
-    background-color: #fff;
+    background-color: #000;
     min-height: 100vh;
 }
 
 .topImage {
     width: 100%;
-    height: 1000rpx;
+    height: 100vh;
     background: #000;
+    display: flex;
+    justify-content: center;
+    overflow: hidden;
+}
+
+.imageVIew{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .topImage image {
-    width: 670rpx;
-    height: 1000rpx;
-    margin: 0 40rpx 0;
+    width: 480rpx;
 }
 
 .makeBtn {
+    width: 100%;
+    height: 144rpx;
+    background: #252525;
+    text-align: center;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.uploadBtn {
     width: 670rpx;
     height: 94rpx;
     background: rgba(9, 115, 252, 1);
     box-shadow: 0px 10rpx 20rpx 0px rgba(9, 115, 252, 0.2);
     border-radius: 47rpx;
-    line-height: 94rpx;
-    text-align: center;
-    color: #fff;
     font-size: 40rpx;
-    margin: 56rpx auto;
+    font-family: PingFangSC;
+    font-weight: 500;
+    color: rgba(255, 255, 255, 1);
+    line-height: 94rpx;
 }
