--- a/pages/mine/mine.wxss
+++ b/pages/mine/mine.wxss
@@ -5,7 +5,7 @@
 
 .userInfoView {
     width: 100%;
-    height: 260rpx;
+    height: 200rpx;
     box-sizing: border-box;
     padding: 40rpx;
     background: #fff;
@@ -15,15 +15,15 @@
 }
 
 .userIocn {
-    width: 180rpx;
-    height: 180rpx;
+    width: 120rpx;
+    height: 120rpx;
     border-radius: 50%;
     overflow: hidden;
-    margin-right: 40rpx;
+    margin-right: 24rpx;
 }
 
 .userNameView {
-    width: 350rpx;
+    width: 380rpx;
 }
 
 .huiyuanview {
@@ -34,10 +34,13 @@
 
 .username {
     max-width: 280rpx;
+    margin-right: 10rpx;
+    font-size: 40rpx;
 }
 
 .renewalBtn {
-    width: 100rpx;
+    /* min-width: 100rpx; */
+    width: 144rpx;
     height: 40rpx;
     border-radius: 20rpx;
     border: 2rpx solid rgba(9, 115, 252, 1);
@@ -45,6 +48,7 @@
     text-align: center;
     color: #0973FC;
     font-size: 30rpx;
+    padding: 0 10rpx;
 }
 
 /* 项目列表 */
@@ -62,9 +66,16 @@
     display: flex;
     justify-content: flex-start;
     align-items: center;
+    background-color: #fff;
 }
 
 .shengming{
     margin-top: 16rpx;
     background-color: #fff;
+}
+
+.huiyuanTxtView{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
 }
