--- a/pages/mine/mine.wxml
+++ b/pages/mine/mine.wxml
@@ -14,7 +14,7 @@
                 <image wx:if="{{isVip}}" src="/assets/app/huiyuan.png" style="width:40rpx;height:40rpx;" />
             </view>
             <view style="color:#999;font-size:28rpx;margin-top:6rpx;">
-                {{isVip?endtime+'到期':'点击开通会员'}}
+                {{isVip?endtime:'点击开通会员'}}<text wx:if="{{isVip &&!zhongshen}}">到期</text>
             </view>
         </view>
 
