添加底部制作

--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,7 +1,7 @@
 <view class="bg" wx:if="{{apiHaveLoad}}">
 
     <!-- 顶部上传 -->
-    <view class="topUploadView">
+    <view class="topUploadView" catchtap="shangchuan">
         <image src="/assets/app/homeUpload.png" />
     </view>
 
