--- a/pages/tabMaking/tabMaking.wxml
+++ b/pages/tabMaking/tabMaking.wxml
@@ -15,4 +15,7 @@
 
     </view>
 
+    <button catchtap='catchtap' id='getInfoBtn' wx:if="{{!hasUserInfo && canIUse}}" open-type="getUserInfo" lang="zh_CN" bindgetuserinfo="getUserInfo">
+    </button>
+
 </view>
