--- a/pages/making/making.wxml
+++ b/pages/making/making.wxml
@@ -10,10 +10,25 @@
 
     <view class="makeBtn">
 
-        <view wx:if="{{imgtype!=15}}" class="uploadBtn" catchtap="shangchuan">上传1张照片 立即生成</view>
-        <!-- <view wx:if="{{imgtype!=15}}" class="uploadBtn" catchtap="cutOutshangchuan">上传1张照片 立即生成</view> -->
-        <view wx:if="{{imgtype==15}}" class="uploadBtn" catchtap="cutOutshangchuan">上传1张照片 立即生成</view>
+        <view wx:if="{{imgtype!=16}}" class="uploadBtn" catchtap="shangchuan">
+            上传1张照片 立即生成
+            <form bindsubmit="formSubmit" report-submit="{{true}}">
+                <button formType="submit" class='Sbtn'>
+                </button>
+            </form>
+        </view>
+        <!-- <view wx:if="{{imgtype!=16}}" class="uploadBtn" catchtap="cutOutshangchuan">上传1张照片 立即生成</view> -->
+        <view wx:if="{{imgtype==16}}" class="uploadBtn" catchtap="cutOutshangchuan">
+            上传人像照片 立即生成
+            <form bindsubmit="formSubmit" report-submit="{{true}}">
+                <button formType="submit" class='Sbtn'>
+                </button>
+            </form>
+        </view>
 
     </view>
+
+    <button catchtap='catchtap' id='getInfoBtn' wx:if="{{!hasUserInfo && canIUse}}" open-type="getUserInfo" lang="zh_CN" bindgetuserinfo="getUserInfo">
+    </button>
 
 </view>
