--- a/app.wxss
+++ b/app.wxss
@@ -148,3 +148,25 @@ button::after {
     margin: 0;
 }
 
+/* 收集formid */
+
+.Sbtn {
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    margin: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0;
+}
+
+form {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0;
+}
+
