--- a/pages/classify/classify.wxss
+++ b/pages/classify/classify.wxss
@@ -22,6 +22,7 @@
     color: #282828;
     font-family: PingFangSC;
     box-sizing: border-box;
+    position: relative;
 }
 
 .selectClassBox {
@@ -52,6 +53,7 @@
     border-radius: 8rpx;
     overflow: hidden;
     box-shadow:0px 4rpx 8rpx 0px rgba(0,0,0,0.08);
+    position: relative;
 }
 
 .mubanitem image {
