--- a/pages/cutout/cutout.wxss
+++ b/pages/cutout/cutout.wxss
@@ -123,3 +123,52 @@
     /* border: 4rpx #fff dashed; */
     /* z-index: 400; */
 }
+
+/* 积分mask */
+
+.jifenMask {
+    width: 100%;
+    height: 100vh;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.7);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 9999;
+}
+
+.maskBody {
+    width: 600rpx;
+    height: 710rpx;
+    background: #fff;
+    border-radius: 20rpx;
+    overflow: hidden;
+    text-align: center;
+}
+
+.adView {
+    width: 100%;
+    padding: 0 88rpx 0 110rpx;
+    box-sizing: border-box;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 60rpx;
+}
+
+.shareBtn{
+    position: relative;
+}
+
+.adView image {
+    width: 128rpx;
+    height: 128rpx;
+}
+
+.maskBotAdView {
+    width: 520rpx;
+    height: 128rpx;
+    margin: 64rpx auto 0;
+}
